Revert "initial work on mtree implementation"
This reverts commit 6088a98e1dedb2a4fbc779a3c62f70a1b4d022d2.

Conflicts:
	src/edu/mit/csail/cgs/deepseq/discovery/kmer/mtree/MTree.java

Testing against matrix implementation, uses M-Tree